--- a/app/src/main/res/layout/fragment_queue.xml
+++ b/app/src/main/res/layout/fragment_queue.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".QueueFragment"
+    android:background="@drawable/megaphone"
     >
 
     <androidx.recyclerview.widget.RecyclerView
@@ -27,7 +28,6 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:src="@drawable/ic_add"
-        android:tint="@android:color/white"
         />
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/buttonNext"
