--- a/app/src/main/res/layout/head_item.xml
+++ b/app/src/main/res/layout/head_item.xml
@@ -3,10 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
+    android:layout_marginTop="8dp"
     android:paddingStart="16dp"
     android:paddingEnd="16dp"
     android:paddingTop="8dp"
-    android:paddingBottom="8dp">
+    android:paddingBottom="8dp"
+    android:background="@drawable/my_rect"
+    android:elevation="7dp">
     <TextView
         android:id="@+id/nameQueue"
         android:layout_marginStart="8dp"
