--- a/app/src/main/res/layout/queue_item.xml
+++ b/app/src/main/res/layout/queue_item.xml
@@ -6,17 +6,26 @@
     android:paddingStart="16dp"
     android:paddingEnd="16dp"
     android:paddingTop="8dp"
-    android:paddingBottom="8dp">
+    android:paddingBottom="8dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginStart="80dp"
+    android:layout_marginEnd="80dp"
+    android:background="@drawable/my_rect"
+    android:elevation="7dp"
+    >
     <TextView
         android:id="@+id/elementName"
-        android:layout_marginStart="80dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+
+        android:textSize="24sp"
         android:text="Queue name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
